--- a/vignettes/classification.Rmd
+++ b/vignettes/classification.Rmd
@@ -1,14 +1,37 @@
-###
-# Fits an easier net for a regression problem
-###
+---
+title: "Classification"
+output: rmarkdown::html_vignette
+vignette: >
+  %\VignetteIndexEntry{Classification}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
+---
 
-source("manifest.R")
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>"
+)
+```
+
+```{r setup}
+library(tensorflow)
+library(keras)
+library(tfautograph)
+library(tfdatasets)
+library(reticulate)
+library(purrr)
+library(tfestimators)
+library(tfruns)
+library(R6)
+library(testit)
+library(data.table)
 library(easiernet)
+```
 
-# Hyperparameter flags ---------------------------------------------------
-
+```{r}
 FLAGS <- flags(
-  flag_string("data_path", "data/iris_regression.csv", description = "CSV file with no row names, last column is the observed outcome"),
+  flag_string("data_path", "iris.csv", description = "CSV file with no row names, last column is the observed outcome (i.e. 0-indexed class)."),
   flag_numeric("data_seed", 0),
   flag_numeric("model_seed", 0),
   flag_numeric("num_nets", 2),
@@ -21,13 +44,11 @@ FLAGS <- flags(
   flag_numeric("validation_split", 0),
   flag_string("out_path", "")
 )
+```
 
-# Data Preparation ---------------------------------------------------
-set.seed(FLAGS$data_seed)
-assert(nchar(FLAGS$data_path) > 0)
-
+```{r}
+# Data prep
 data_df <- fread(FLAGS$data_path)
-# Shuffle data
 rows <- sample(nrow(data_df))
 data_df <- as.matrix(data_df[rows,])
 colnames(data_df) <- NULL
@@ -35,6 +56,13 @@ n_train <- floor(nrow(data_df) * (1 - FLAGS$validation_split))
 x_train <- data_df[1:n_train, 1:(ncol(data_df) - 1)]
 y_train <- data_df[1:n_train, ncol(data_df)]
 
+# Create sample weights
+class_weight <- 1.0/(table(y_train)/nrow(x_train))
+class_weight <- class_weight/sum(class_weight)
+sample_weight <- k_cast_to_floatx(class_weight[y_train + 1])
+```
+
+```{r}
 # Train Model --------------------------------------------------------------
 
 model <- fit_easier_net(
@@ -42,20 +70,22 @@ model <- fit_easier_net(
   y_train,
   num_layers = FLAGS$num_layers,
   num_hidden_nodes = FLAGS$num_hidden_nodes,
-  num_out=1,
+  num_out=length(class_weight),
   num_nets = FLAGS$num_nets,
-  loss="mse",
-  metrics=c("mse"),
-  loss_func = loss_mean_squared_error,
+  loss = "sparse_categorical_crossentropy",
+  loss_func = loss_sparse_categorical_crossentropy,
+  metrics = c("accuracy", "sparse_categorical_crossentropy"),
   lambda1 = FLAGS$lambda1,
   lambda2 = FLAGS$lambda2,
   epochs_adam = FLAGS$epochs_adam,
   epochs_prox = FLAGS$epochs_prox,
-  sample_weight = NULL,
+  sample_weight = sample_weight,
   seed = FLAGS$model_seed,
   validation_split = 0
 )
+```
 
+```{r}
 # Evaluate Model ----------------------------------------------------------
 
 if (n_train >= nrow(data_df)) {
@@ -65,8 +95,11 @@ if (n_train >= nrow(data_df)) {
   y_val <- data_df[(n_train + 1): nrow(data_df), ncol(data_df)]
   model$ensemble %>% evaluate(x_val, y_val, sample_weight = NULL)
 }
+```
 
+```{r}
 # Save Model --------------------------------------------------------------
-if (nchar(FLAGS$out_path) > 1) {
+if (nchar(FLAGS$out_path) > 0) {
   save_model_tf(object = model$ensemble, filepath = FLAGS$out_path)
 }
+```
